--- a/WpfTestMusicParseApp/WpfTestMusicParseApp.csproj
+++ b/WpfTestMusicParseApp/WpfTestMusicParseApp.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.32" />
+  </ItemGroup>
+
 </Project>
